# lagrange-multiplier

./: README.md  lagrange_multiplier.py  pyproject.toml
