[tool.poetry]
name = "lagrange-multiplier"
version = "0.1.0"
description = ""
authors = ["yuichiro12 <talcnrhyme@gmail.com>"]
readme = "README.md"
packages = [{include = "lagrange_multiplier"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
scipy = "^1.10.1"
jax = "^0.4.10"
jaxlib = "^0.4.10"
jaxopt = "^0.7"
typing-extensions = "^4.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
